--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "elm": "^0.19.0-bugfix2",
+    "elm-hot-webpack-loader": "^1.0.2",
     "elm-webpack-loader": "^5.0.0"
   },
   "devDependencies": {
